# order-book-feed-system

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
dashboard/: live_order_book_dash.py
include/: market_data_parser.h  order_book.h  thread_safe_queue.h  types.h
scripts/: feed_simulator.py
src/: main.cpp  market_data_parser.cpp  network_thread.cpp  order_book.cpp  processing_thread.cpp  ticker_thread.cpp  websocket_server.cpp
tests/: test_market_data_parser.cpp  test_order_book.cpp
